<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FX Watcher</string>
    <string name="deposit">Депозит</string>
    <string name="amount">Доступная</string>
    <string name="profit">Доходность</string>
    <string name="get_data_error">Ошибка получения данных от сервера!</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="enter_your_login">Ведите Ваш логин:</string>
    <string name="enter_your_pass">Введите Ваш пароль:</string>
    <string name="wrong_login_length">Длина логина должна быть больше 3х символов!</string>
    <string name="wrong_pass_length">Длина пароля должна быть больше 3х символов!</string>
    <string name="wrong_login_pass">Не правильный логин или пароль!</string>

</resources>
